appId: com.dineshbali18.expensetrackerapp
---
- launchApp
- tapOn: "Get Started"
- assertVisible: "Enter your name"
- tapOn:
    id: "nameInput"
- inputText:
    id: "nameInput"
    text: "Dinesh Bali"
- tapOn:
    id: "emailInput"
- inputText:
    id: "emailInput"
    text: "dineshbali41@gmail.com"
- tapOn:
    id: "phoneInput"
- inputText:
    id: "phoneInput"
    text: "1234567890"
- tapOn:
    id: "passwordInput"
- inputText:
    id: "passwordInput"
    text: "gamer45"
- tapOn: "Sign Up"
- assertVisible: "User already exists"
