appId: com.dineshbali18.expensetrackerapp
---
- launchApp
- assertVisible: "Get Started"
- tapOn: "Get Started"
- assertVisible: "Enter your name"
